--- a/gasolina/templates/consultar_variaciones.html
+++ b/gasolina/templates/consultar_variaciones.html
@@ -35,12 +35,12 @@
               <span class="middle"></span>
               <span class="bottom"></span>
             </div>
-              <a href="index.html" class="navbar-brand">
+              <a href="/consultar_variaciones" class="navbar-brand">
                <b>VPC - Variación del precio de los combustibles</b>
               </a>
 
             <ul class="nav navbar-nav navbar-right user-nav">
-              <li class="user-name"><span>Omar Garcia</span></li>
+              <li class="user-name"><span>{{ user.username }}</span></li>
               <li class="dropdown avatar-dropdown">
                 <img src="{% static 'asset/img/avatar.jpg' %}" class="img-circle avatar" alt="user name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"/>
                 <ul class="dropdown-menu user-dropdown">
@@ -69,17 +69,19 @@
                 <p class="animated fadeInRight">Sat,October 1st 2029</p>
               </li>
               <div class="col-md-12">
-            <a href="/consultar_variaciones/"><span class="icon-chart fa"></span> Consultar Varciaciones</a><br>
+            <a href="/consultar_variaciones/"><span class="icon-chart fa"></span> Consultar Variaciones</a><br>
               </div>
               <div class="col-md-12">
             <a href="/analisis/"><span class="icon-eye fa"></span> Analisis de Sensibilidad</a><br>
               </div>
+              {% if rol.idRol.idRol == 1 %}
               <div class="col-md-12">
             <a href="/datos_masivos/"><span class="icon-cloud-upload fa"></span> Ingresar Datos Masivos</a><br>
               </div>
               <div class="col-md-12">
             <a href="/dato_indiv/"><span class="icon-cloud-upload fa"></span> Ingresar Dato Individual</a>
               </div>
+              {% endif %}
             </ul>
           </div>
         </div>
@@ -161,13 +163,42 @@
               </div>
             </div>
             <!-- end: Formulario -->
-            <h3>DEPARTAMENTO VS PRECIO</h3><img src="{% static 'img/chart.png' %}" />
-            <h3>AÑO VS PRECIO</h3><img src="{% static 'img/chart2.png' %}" />
+            {% if grafic_list %}
+            <div class="col-md-12 top-20 padding-0">
+              <div class="col-md-12">
+                <div class="panel">
+                  <div class="panel-heading"><h3>Gráfico</h3></div>
+                  <div class="panel-body">
+                    <div class="col-md-12">
+                        <table class="highchart table table-striped table-bordered" data-graph-container-before="1" data-graph-type="column" width="100%" cellspacing="0">
+                          <caption>Producto vs Precios</caption>
+                          <thead>
+                            <tr>
+                              <th>Producto</th>
+                              <th>Precio</th>
+                              
+                            </tr>
+                          </thead>
+                          <tbody>
+                            {% for precioCombustible in grafic_list %}
+                            <tr>
+                              <td>{{ precioCombustible.idProducto.producto }}</td>
+                              <td>{{ precioCombustible.precioCombustible }}</td>
+                            </tr>
+                            {% endfor %}
+                          </tbody>
+                        </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            {% endif %}
           <!-- start: tabla -->
           <div class="col-md-12 top-20 padding-0">
             <div class="col-md-12">
               <div class="panel">
-                <div class="panel-heading"><h3>Datos</h3></div>
+                <div class="panel-heading"><h3>Datos Completos de la Consulta</h3></div>
                 <div class="panel-body">
                   <div class="responsive-table">
                     {% if precioCombustible_list %}
@@ -285,16 +316,16 @@
       <script src={% static 'asset/js/bootstrap.min.js' %}></script>
       <script src={% static 'asset/js/plugins/moment.min.js' %}></script>
       <script src={% static 'asset/js/plugins/icheck.min.js' %}></script>
+      <script src={% static 'asset/js/plugins/chart.min.js' %}></script>
       <script src={% static 'asset/js/plugins/jquery.nicescroll.js' %}></script>
       <script src={% static 'asset/js/plugins/select2.full.min.js' %}></script>
-
+      <script src={% static 'js/jquery.highchartTable.js' %}></script>
+      <script src={% static 'js/highcharts.js' %}></script>
       <!-- custom -->
       <script src={% static 'asset/js/main.js' %}></script>
       <script type="text/javascript">
         $(document).ready(function(){
-              $(".btn-flip").on("click",function(){
-                    $(this).find(".flip").animate().replaceWith("<span class='fa fa-check' style='font-size:2em;'></span>");
-                });
+              $('table.highchart').highchartTable();
         });
 
         $(".select2-A").select2({
