--- a/gasolina/templates/registrarse.html
+++ b/gasolina/templates/registrarse.html
@@ -25,7 +25,6 @@
     <body id="mimin" class="dashboard form-signin-wrapper">
 
       <div class="container">
-            {% csrf_token %}
         <form action="/registrarse/ " class="form-signin" method="POST">
           {% csrf_token %}
           <div class="panel periodic-login">
@@ -36,12 +35,12 @@
 
                   <i class="icons icon-arrow-down"></i>
                   <div class="form-group form-animate-text" style="margin-top:40px !important;">
-                    <input type="text" name="nombreUsuario" class="form-text" required >
+                    <input type="text" name="first_name" class="form-text" required >
                     <span class="bar"></span>
                     <label>Nombre</label>
                   </div>
                   <div class="form-group form-animate-text" style="margin-top:40px !important;">
-                    <input type="text" name="apellidoUsuario" class="form-text" required>
+                    <input type="text" name="last_name" class="form-text" required>
                     <span class="bar"></span>
                     <label>Apellidos</label>
                   </div>
