Se arreglo un error que al darle clic a ingresar dato individual e ingresar datos masivo mandava a la misma vista la de insgresar dato indivual

--- a/gasolina/templates/registration/login.html
+++ b/gasolina/templates/registration/login.html
@@ -37,7 +37,7 @@
                   {% if mensaje %}
                     <br><p style="color: #ee0700"><b>{{ mensaje }}</b></p>
                   {% endif %}
-                  <form action="http://localhost:8000/consultar_variaciones/" method="POST">
+                  <form action="/consultar_variaciones/" method="POST">
                   {% csrf_token %}
                     <div class="form-group form-animate-text" style="margin-top:40px !important;">
                       <input type="text" class="form-text" name="username" required>
